[package]
name = "rymo"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.80"
bytes = "1.5.0"
futures = "0.3.30"
log = "0.4.20"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = [
    "io-util",
    "net",
    "rt",
    "macros",
    "rt-multi-thread",
    "sync",
] }

[dev-dependencies]
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
lto = true
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
# opt-level = "s"   # Optimize for binary size
strip = true # Remove debug symbols
