[package]
name = "rymo"
version = "0.1.1"
edition = "2021"

[workspace]
members = ["examples/*"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.82"
bytes = "1.6.0"
futures = "0.3.30"
log = "0.4.21"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = [
    "io-util",
    "net",
    "rt",
    "macros",
    "rt-multi-thread",
    "sync",
] }

[profile.release]
lto = true
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
# opt-level = "s"   # Optimize for binary size
strip = true # Remove debug symbols
